--- a/WIKI_API_PROJECT/WIKI_API_PROJECT.csproj
+++ b/WIKI_API_PROJECT/WIKI_API_PROJECT.csproj
@@ -19,10 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Controllers\" />
-	</ItemGroup>
-
-	<ItemGroup>
+		<ProjectReference Include="..\DTOs\DTOs.csproj" />
 		<ProjectReference Include="..\Models\Models.csproj" />
 		<ProjectReference Include="..\Repositories\Repositories.csproj" />
 	</ItemGroup>
