--- a/IRepositories/IRepositories.csproj
+++ b/IRepositories/IRepositories.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DTOs\DTOs.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
