--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DTOs\DTOs.csproj" />
     <ProjectReference Include="..\IRepositories\IRepositories.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
